--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Statistics-WilcoxonRankSum
 
+0.0.4  Fir May 15 10:36:05 2009
+       RT 46093: documentation issue
 0.0.1  Wed Jan  9 10:12:07 2008
        Initial release.
 
