--- a/Changes
+++ b/Changes
@@ -1,8 +1,10 @@
 Revision history for Statistics-WilcoxonRankSum
 
-0.0.5  Fir May 15 10:36:05 2009
+0.0.6  Thu Aug  6 2009
+       RT 48055: p-values > 1 returned
+0.0.5  Fri May 15 10:36:05 2009
        RT 46813: documentation issue
-0.0.4  Fir May 15 10:36:05 2009
+0.0.4  Fri May 15 10:36:05 2009
        RT 46093: documentation issue
 0.0.1  Wed Jan  9 10:12:07 2008
        Initial release.
